[gd_scene load_steps=5 format=2]

[ext_resource path="res://Imagens/fundo preto.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Mapa.gd" type="Script" id=2]
[ext_resource path="res://Imagens/Mapa.png" type="Texture" id=3]
[ext_resource path="res://assets/tela_quintal.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="TelaQuintal" type="Sprite" parent="."]
position = Vector2( 641.25, 357.25 )
scale = Vector2( 0.678254, 0.828426 )
texture = ExtResource( 4 )

[node name="FundoPreto" type="Sprite" parent="."]
position = Vector2( 640, 359 )
scale = Vector2( 2.03125, 2.05 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mapa" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.944737, 0.963889 )
texture = ExtResource( 3 )

[node name="Button_mapa_voltar" type="Button" parent="."]
show_behind_parent = true
margin_left = 514.0
margin_top = 105.0
margin_right = 545.0
margin_bottom = 137.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_mercado" type="Button" parent="."]
show_behind_parent = true
margin_left = 513.0
margin_top = 338.0
margin_right = 557.0
margin_bottom = 386.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_faculdade" type="Button" parent="."]
show_behind_parent = true
margin_left = 724.0
margin_top = 202.0
margin_right = 769.0
margin_bottom = 253.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_quarto" type="Button" parent="."]
show_behind_parent = true
margin_left = 731.0
margin_top = 94.0
margin_right = 777.0
margin_bottom = 138.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button_mapa_voltar" to="." method="_on_Button_mapa_voltar_pressed"]
[connection signal="pressed" from="Button_mercado" to="." method="_on_Button_mercado_pressed"]
[connection signal="pressed" from="Button_faculdade" to="." method="_on_Button_faculdade_pressed"]
[connection signal="pressed" from="Button_quarto" to="." method="_on_Button_quarto_pressed"]
